# geo-gearloes

./: .env.example  .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: clippy.yml  rust.yml
atlas/: Cargo.toml
atlas/src/: anonymity.rs  error.rs  join_table.rs  lib.rs  model.rs  porto.rs
atlas/tests/: porto_map_match.rs
comms/: Cargo.toml
comms-macros/: Cargo.toml
comms-macros/src/: lib.rs
comms/src/: comms_types.rs  lib.rs
flotnavn/: Cargo.toml
flotnavn/src/: http_methods.rs  main.rs
flotnavn/src/endpoints/: anon.rs  mod.rs
location_obfuscation/: Cargo.toml
location_obfuscation/src/: anonymity.rs  lib.rs
pysim/: Cargo.toml  pyproject.toml  pysim.pyi
pysim/src/: car.rs  config.rs  lib.rs  sim.rs
pysim/src/widgets/: map.rs  mod.rs
pytest/: main.py  model.keras
pytest/it1ep3/: model.keras  normalizer_x.keras  normalizer_y.keras
pytest/it1ep30/: model.keras  normalizer_x.keras  normalizer_y.keras
pytest/it1ep60/: model.keras  normalizer_x.keras  normalizer_y.keras
pytest/it2ep1/: model.keras  normalizer_x.keras  normalizer_y.keras
pytest/it2ep3/: model.keras  normalizer_x.keras  normalizer_y.keras
pytest/it2ep5/: model.keras  normalizer_x.keras  normalizer_y.keras
rusty-roads/: Cargo.toml
rusty-roads/resources/: 277_nearby_roads.txt  277_traj.txt  road_network_intersection.txt  traj_network_intersection.txt
rusty-roads/src/: lib.rs  parquet.rs
rusty-roads/src/burn/: gru_model.rs  mod.rs
rusty-roads/src/graph/: mod.rs  road_network.rs
rusty-roads/src/index/: mod.rs  road_index.rs
rusty-roads/src/map_match/: map_match.rs  mod.rs
rusty-roads/src/table/: anonymities.rs  feature_class.rs  mod.rs  name.rs  ref_item.rs  ref_many.rs  road.rs  trajectories.rs
server/: Cargo.toml
server/src/: http_methods.rs  main.rs
server/src/endpoints/: anon.rs  mod.rs  model.rs
sim/: Cargo.toml
sim/src/: args.rs  main.rs  map.rs  worker.rs
sim/src/widgets/: map.rs  mod.rs  spawn_sim_menu.rs  stepcounter.rs  stepper.rs
tests/: Cargo.toml
tests/src/: lib.rs
wasm-frontend/: Cargo.toml  build.rs
wasm-frontend/src/: lib.rs
wasm-frontend/websm/rustywasm/: Cargo.toml
wasm-frontend/websm/rustywasm/src/: lib.rs  map.rs
wasm-frontend/websm/rustywasm/src/state/: index.rs  mod.rs
wasm-frontend/websm/webywasm/: index.html  tsconfig.json
wasm-frontend/websm/webywasm/src/: main.ts
