[workspace]
resolver = "2"

members = [ "atlas","rusty-roads"]

[workspace.lints.clippy]
# all = { level = "deny", priority = 1 }
complexity = {level = "deny", priority = 1}
correctness = {level = "deny", priority = 1}
perf = {level = "deny", priority = 1}
unwrap_used= {level = "deny", priority = 1}
suspicious = "warn"
todo = "warn"
map_unwrap_or = {level = "deny", priority = 2}
# [workspace.lints.clippy.pedantic]
