[workspace]
resolver = "2"

members = [ "atlas", "comms", "comms-macros", "flotnavn","rusty-roads", "tests", "wasm-frontend", "wasm-frontend/websm/rustywasm"]

[workspace.lints.clippy]
# all = { level = "deny", priority = 1 }
complexity = {level = "deny", priority = 1}
correctness = {level = "deny", priority = 1}
perf = {level = "deny", priority = 1}
unwrap_used= {level = "deny", priority = 1}
suspicious = "warn"
todo = "warn"
