[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
rusty-roads = {path = "../rusty-roads"}
sqlx = { version = "0.8.3", features = [ "runtime-async-std" ] }


[lints]
workspace = true
