[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
burn = "0.16.1"
derive_more = { version = "2.0.1", features = ["from","error","display"] }
geo-traits = "0.2.0"
geo-types = "0.7.15"
rusty-roads = { path = "../rusty-roads" }
sqlx = { version = "0.8.3", features = [
    "runtime-async-std",
    "postgres",
    "macros",
], default-features = false }
thiserror = "2.0.12"
wkb = "0.8.0"


[lints]
workspace = true

[dev-dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
