[package]
name = "comms"
version = "0.1.0"
edition = "2024"

[dependencies]
parquet = "54.2.0"
rand = "0.9.0"
thiserror = "2.0.11"
wkb = "0.8.0"
geo-traits = "0.2.0"
geo-types = "0.7.15"
bytes = "1.10.0"
arrow-array = "54.2.0"
arrow-schema = "54.2.0"
itertools = "0.14.0"
comms-macros = {path = "../comms-macros/"}

[lints]
workspace = true
