[package]
name = "pysim"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysim"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
comms = { version = "0.1.0", path = "../comms" }
eframe = { version = "0.31.1", features = ["wgpu"] }
geo = "0.30.0"
itertools = "0.14.0"
location_obfuscation = { version = "0.1.0", path = "../location_obfuscation" }
numpy = "0.24.0"
proj = "0.30.0"
pyo3 = "0.24.0"
pyo3-bytes = "0.2.0"
rand = "0.9.1"
rayon = "1.10.0"
rstar = "0.12.2"
rusty-roads = { version = "0.1.0", path = "../rusty-roads" }
ureq = "3.0.11"
