[package]
name = "rusty-roads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "54.2.0"
arrow-schema = "54.2.0"
bytes = "1.10.0"
geo-traits = "0.2.0"
geo-types = "0.7.15"
itertools = "0.14.0"
parquet = "54.2.0"
rand = "0.9.0"
thiserror = "2.0.11"
wkb = "0.8.0"

