[package]
name = "flotnavn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
atlas = { version = "0.1.0", path = "../atlas" }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = "1.44.1"
rusty-roads = { path = "../rusty-roads" }
comms = { version = "0.1.0", path = "../comms" }

[lints]
workspace = true
