[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
atlas = { version = "0.1.0", path = "../atlas" }
burn = "0.16.1"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = "1.44.1"
rusty-roads = { path = "../rusty-roads" }
comms = { version = "0.1.0", path = "../comms" }
wkb = "0.8.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"

[dev-dependencies]
rand_chacha = "0.9.0"
rand_core = "0.9.3"

[lints]
workspace = true
