[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
comms = { version = "0.1.0", path = "../comms" }
eframe = { version = "0.31.1", features = ["wgpu"] }
geo = { version = "0.30.0" }
gpx = "0.10.0"
nalgebra = "0.33.2"
proj = "0.30.0"
rayon = "1.10.0"
rstar = "0.12.2"
rusty-roads = { version = "0.1.0", path = "../rusty-roads" }
ureq = "3.0.11"

[lints]
workspace = true
